client/stylesheets/style.css
/* Latin */
@font-face {
  font-family: 'Abel';
  font-style: normal;
  font-weight: 400;
  src: local('Abel'), local('Abel-Regular'), url(https://fonts.gstatic.com/s/abel/v6/brdGGFwqYJxjg2CD1E9o7g.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
}
/* Bad practice, should be worked out of our project */
* {
    margin: 0;
}
body {
  margin:0;
  padding: 0;
  font-family:"Abel",sans-serif, serif;
  font-size: 24;
  font-weight: bold;
  background-color: black;
}
html, body{
    height: 100%;
    font-family: "Abel", sans-serif;
}
h1,h2, h3, h4, h5, h6, p {
      margin-bottom: 20px;
}
h1.inspire {
  font-size: 7em;
  text-align: center;
  color: white;
}
h1.inspireTop {
  font-size: 5em;
  color: white;
  padding-top: 5em;
  padding-left: 2em;
}
h2.subTitle {
  font-size: 3.5em;
}
div.sect.sectTwo, div.sect.sectThree {
  display:flex;
  align-items: center;
  justify-content: center;
}
img.devPic {
  height: 10em;
  width: 10em;
  border-radius: 25%;
}
table.developers {
  table-layout: fixed;
  width: 100%;
  margin-right:auto;
  margin-left:auto;

}
/* Navigation Bar */
.centered {
  text-align:center;
  padding-top: 3em;
  margin-bottom: 2em;
  color: white;
}
.nav {
    position: fixed;
    height: 50px;
    width: 100%;
    background-color: rgba(0,0,0) ;
    z-index: 99;
    text-align: center;
    padding-bottom: 1.5em;
}
.logoNav {
  height: 50px;
  width: 300px;
  margin-left: 5em;
  text-align: center;
  margin-top: 5px;
}
.nav a.mainNav {
    text-decoration: none;
    font-family: "Abel", sans-serif;
    color: #108CF4;
    margin-right: 50px;
    line-height: 50px;
    text-align: center;
    margin-bottom: 5px;
    font-size: 20px;

}
.nav a:hover {
    color: #6fbaf8;
}
.sect{
  height:900px;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}
.subSection {
    border: 5px groove #ffff00;
    background-color: #252525;;
    text-align: center;
    color: #ffffff;
    vertical-align: middle;
}
.subSection.subsectOne {
  position: relative;
  text-align: center;
  vertical-align: middle;
}
=form {
    padding: 20px 0;
    width: 20%;
    margin-top: 10%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    background-color:#6fbaf8;
}
form input{
    outline: 0;
    border: 1px solid;
    background-color: #222233;
    width: 250px;
    border-radius: 3px;
    padding: 10px 12px;
    margin: 10px auto 20px auto;
    display: block;
    text-align: center;
    font-size: 18px;
    color: white;
}
#submit {
    background-color: #6fbaf8;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius:6px;
    color: #222233;
    font-family: "Abel";
    font-size: 20px;
    text-decoration: none;
    cursor: pointer;
    border:none;
}
#submit:hover {
    border: none;
    background:#222233;
    box-shadow: 0px 0px 1px black;
}
/* Pictures for different sections of the parallax */
.sectOne {
  background-image: url("bdaycake.jpg");
}
.sectTwo {
  background-image: url("cupcakes.jpg")
}
.sectThree {
  background-image: url("candles.jpg")
}
.about {
    font-family:'Abel', sans-serif;
}
p.negate {
  margin-bottom: 20px;
  margin: 0 auto;
  padding-bottom: 0px;
  font-size: 20px;
  width: 45em;
  text-align: center;


}
/* Should Chance Nav Color after scrolling */
.nav.active {
    background-color: black;
}
/* Survey */
img.surveyOption {
  height:40em;
  margin-left:6em;
  margin-right:6em;
  width:40em;
  border: 6px outset #108cf4;
}
div.imgContainer {
  text-align: center;
}
/* Dashboard */
h2.menuItem {
  color:#EF730B;
  border-bottom: 3px solid;
  font-family:'Abel' ,"sans-serif", serif;
}
td.menuBox {
  border: 5px groove #108CF4;
  background-color: #252525;
  align: center;
  margin-left: auto;
  margin-right: auto;

}
p.statusText {
  color:white;
  background-color: #252525;
  font-family:'Abel' ,"sans-serif", serif;
}
table.spaced {
  table-layout: fixed;
  text-align:center;
  width:100%;
  border-spacing: 5em;
}
h1.centered {
  color: #868685;
  font-family:'Abel' ,"sans-serif", serif;
}

.btn {
  border-radius: 5px;
  padding: 15px 25px;
  font-size: 22px;
  text-decoration: none;
  margin: 20px;
  color: #fff;
  position: relative;
  display: inline-block;
}

.btn:active {
  transform: translate(0px, 5px);
  -webkit-transform: translate(0px, 5px);
  box-shadow: 0px 1px 0px 0px;
}

.blue {
  background-color: #108cf4;
  box-shadow: 0px 5px 0px 0px #3C93D5;
}

.blue:hover {
  background-color: #6fbaf8;
}

/* Login Styles */

/* Main login link */
.login-link-text {
    font-family: "Abel", sans-serif;
    color: #108CF4;
    margin-right: 50px;
    line-height: 50px;
    text-align: center;
    margin-bottom: 5px;
    font-size: 20px;
}
/* "Forgot password" and "sign up links" */
.additional-link {

}

/* Login button */
.login-buttons-password {
    /*  Anything we put here appears to
        be overriden by Meteor.
        Use !important at your own peril. */
    background-color: cyan;
}

